<resources>
    <string name="app_name">GentleMan</string>

    <string name="guid_button">כנס לתוכן הדרכתי</string>
    <string name="treatment_button">כנס לחדרי טיפול</string>
    <string name="forum">פורום \"פותחים הכל\"</string>
    <string name="chat">צ\'אט אנונימי אחד על אחד</string>
    <string name="group_support">מרגיש בודד? בוא להכיר עוד..</string>
    <string name="different_way">יש דרך אחרת</string>
    <string name="legal_suggest">יעוץ משפטי בצ\'יק צ\'אק</string>
    <string name="interview_dr">ראיון עם ד\"ר יאיר אפטר</string>
    <string name="self_diag">מדריך לאבחון עצמי</string>
    <string name="exercise">ריכזנו לכם כמה תרגילים</string>

    <string name="treatment_page_header">טיפול</string>
    <string name="personal_treatment_button"> יעוץ אישי</string>
    <string name="group_trail_treatment_button">קבוצתי  ניסיון</string>
    <string name="group_treatment_button">תמיכה קבוצתית</string>

    <string name="personal_diagnosis">אבחון</string>
    <string name="treatment_explain">הסבר על טיפול</string>
    <string name="guidelines">כלים מסייעים</string>
    <string name="success_stories">סיפורי הצלחה</string>
    <string name="legal_advice">ייעוץ משפטי</string>
    <string name="common_questions">שאלות נפוצות</string>
    <string name="general">כללי</string>

    <string name="input_placeholder">כתוב הודעה</string>

    <string name="search_therapist">חפש מטפל</string>

    <string name="video_chat_header">כנס והחל וידאו עם הקבוצה שלך</string>

    <string name="personal_name">רונן</string>
    <string name="personal_email">תראה כמה אתה קרוב לסיום האתגר השבועי</string>
    <string name="my_challenges">אתגרים</string>
    <string name="favorites">מועדפים</string>
    <string name="messages">הודעות</string>
    <string name="progress">80% למילוי האתגר</string>

</resources>
