<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainTreatmentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treatment_page_header"
            android:textSize="50dp"
            android:gravity="center"/>
        <Button
            android:layout_width="130dp"
            android:layout_height="65dp"
            android:id="@+id/personal_treat_id"
            android:text="@string/personal_treatment_button"
            android:onClick="openChat"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:background="@drawable/buttons"
            android:layout_margin="20dp"/>
        <Button
            android:layout_width="130dp"
            android:layout_height="65dp"
            android:id="@+id/group_trail_treat_id"
            android:text="@string/group_trail_treatment_button"
            android:onClick="openChat"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:background="@drawable/buttons"
            android:layout_margin="20dp"/>
        <Button
            android:layout_width="130dp"
            android:layout_height="65dp"
            android:id="@+id/group_treat_id"
            android:text="@string/group_treatment_button"
            android:onClick="openChat"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:background="@drawable/buttons"
            android:layout_margin="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>