<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="10"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/horizontalScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl">

            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/general"
                android:background="@drawable/buttons"
                android:textColor="@color/white"
                android:padding="5dp"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/personal_diagnosis"
                android:background="@drawable/buttons_enpty"
                android:textColor="@color/green"
                android:padding="5dp"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/legal_advice"
                android:background="@drawable/buttons_enpty"
                android:textColor="@color/green"
                android:padding="5dp"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/guidelines"
                android:background="@drawable/buttons_enpty"
                android:textColor="@color/green"
                android:padding="5dp"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/success_stories"
                android:background="@drawable/buttons_enpty"
                android:textColor="@color/green"
                android:padding="5dp"
                />

        </LinearLayout>
        </HorizontalScrollView>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:id="@+id/posts_list"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:layoutDirection="rtl">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5"
                android:onClick="openGroupCaht">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/users_icon_white"
                    android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_treatment_button"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5"
                android:onClick="openTherapistList">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/user_icon_white"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_treatment_button"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>