<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalZoneActivity"
    android:background="@color/light_blue">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_name"
                android:textSize="30sp"/>
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_email"
                android:textSize="15sp"
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

        <ProgressBar
            android:id= "@+id/myProgress"
            style= "?android:attr/progressBarStyleHorizontal"
            android:layout_width= "200dp"
            android:layout_height= "200dp"
            android:background= "@drawable/circular_shape"
            android:indeterminate= "false"
            android:max= "100"
            android:progress= "80"
            android:progressDrawable= "@drawable/circular_progress_bar"
            android:layout_gravity="center"
            />
            <TextView
                android:layout_width= "wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:textSize="20dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:gravity="center">


            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:background="@drawable/circle_light_green"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/star_icon_white"></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/favorites" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/circle_light_green"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/graph_icon_white"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/messages" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/circle_light_green"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/graph_icon_white"></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/my_challenges" />
            </LinearLayout>



        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>